Fix the offset dialog giving inaccurate offsets

When assinging a double to an int, round it, don't just assign it.

BUG:397218